--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -30,7 +30,7 @@ settings
     </button>
     {% csrf_token %}
     </form>
-    <div class="alert alert-warning alert-dismissible fade show d-none" id="settings-alert" role="alert">
+    <div class="alert alert-info alert-dismissible fade show d-none" id="settings-alert" role="alert">
       Saved!
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
