--- a/index/templates/index/results_detail.html
+++ b/index/templates/index/results_detail.html
@@ -8,7 +8,10 @@ dopepod
 <div class="col-auto color results-bar">
   <span class="results-header">
     {{ results_header }}
-  </span>header
+  </span>
+  <!-- <button class="btn btn-dope float-right" id="show-button" type="button" data-toggle="collapse" data-target="#chart-collapse" aria-expanded="false" aria-controls="chart-collapse">
+    +
+  </button> -->
 </div>
 <div class="col-12 results-wrapper">
   <form id="results-form" method="GET" action="{% url 'search' %}">
