--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -3,9 +3,9 @@
   <span class="results-header">
     {{ episodes_header }}
   </span>
-  <button class="btn btn-dope float-right" id="show-button" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
+  <!-- <button class="btn btn-dope float-right" id="show-button" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
     +
-  </button>
+  </button> -->
 </div>
 <div class="col-12 collapse results-wrapper show" id="episode-collapse">
   <div class="row options">
