--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -14,10 +14,7 @@
     <!--Font Awesome-->
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
-    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
@@ -34,14 +31,15 @@
       {% endblock %}
     </div>
     <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom color" id="player">
-    </div>
+    <div class="container-fluid fixed-bottom color" id="player-drop"></div>
     <!--FOOTER-->
     <footer class="footer">
       <div class="container-fluid">
         <div class="row color" id="footer">
           <div class="col">
-            © dopepod 2017
+            <span>
+              © dopepod 2017
+            </span>
           </div>
         </div>
       </div>
