--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -103,7 +103,7 @@
       <!-- <a title="Facebook" class="socialaccount_provider facebook" href="/account/facebook/login/?process=login">
         <i class="fab fa-facebook-f"></i>
       </a> -->
-      <a title="Google" class="socialaccount_provider google" href="/account/google/login/?process=login">
+      <a title="Google" class="socialaccount_provider google social-link" href="/account/google/login/?process=login">
         <i class="fab fa-google"></i>
       </a>
     </div>
