--- a/index/static/style.css
+++ b/index/static/style.css
@@ -433,6 +433,11 @@ body {
   padding-top: 10px;
   margin: auto;
 }
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 .login-field {
   padding: 5px 8px;
   border-radius: .25rem;
@@ -604,8 +609,6 @@ body {
   margin-bottom: 4px;
 }
 
-/* PLAYER */
-
 #overlay {
     background: url("loading.gif");
     background-repeat: no-repeat;
@@ -613,6 +616,12 @@ body {
     height: 240px;
 }
 
+#player-wrapper {
+  /* position: relative; */
+}
+
 #footer {
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-align: center;
 }
