--- a/index/templates/login_signup.html
+++ b/index/templates/login_signup.html
@@ -44,7 +44,7 @@
               <input class="form-control login-field" type="password" name="password" placeholder="Password" required="" id="login-password">
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-dope">Log In</button>
+              <button type="submit" class="btn btn-dope login-button">Log In</button>
             </div>
           </div>
           <div class="form-row">
@@ -83,7 +83,7 @@
             <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
           </div>
           <div class="col-auto">
-            <button type="submit" class="btn btn-dope">Sign Up</button>
+            <button type="submit" class="btn btn-dope signup-button">Sign Up</button>
           </div>
         </div>
       </form>
@@ -94,18 +94,20 @@
         Or log in with a social account
       </span>
       <br />
-      <!-- <a title="Reddit" class="socialaccount_provider reddit" href="/account/reddit/login/?process=login">
+      <div id="social-icons">
+        <a title="Google" class="socialaccount_provider google social-link" href="/account/google/login/?process=login">
+          <i class="fab fa-google"></i>
+        </a>
+        <!-- <a title="Reddit" class="socialaccount_provider reddit" href="/account/reddit/login/?process=login">
         <i class="fab fa-reddit"></i>
-      </a> -->
-      <!-- <a title="Github" class="socialaccount_provider github" href="/account/github/login/?process=login">
+        </a> -->
+        <!-- <a title="Github" class="socialaccount_provider github" href="/account/github/login/?process=login">
         <i class="fab fa-github"></i>
-      </a> -->
-      <!-- <a title="Facebook" class="socialaccount_provider facebook" href="/account/facebook/login/?process=login">
+        </a> -->
+        <!-- <a title="Facebook" class="socialaccount_provider facebook" href="/account/facebook/login/?process=login">
         <i class="fab fa-facebook-f"></i>
-      </a> -->
-      <a title="Google" class="socialaccount_provider google social-link" href="/account/google/login/?process=login">
-        <i class="fab fa-google"></i>
-      </a>
+        </a> -->
+      </div>
     </div>
   </div>
 </div>
