--- a/index/static/style.css
+++ b/index/static/style.css
@@ -433,6 +433,9 @@ body {
   padding-top: 10px;
   margin: auto;
 }
+#social-icons {
+  font-size: 20px;
+}
 .close {
   position: absolute;
   top: 0;
