--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -10,9 +10,9 @@
 <div class="col-12 collapse results-wrapper show" id="episode-collapse">
   <div class="row options">
     <div class="col">
-      <button class="btn btn-dope float-right" id="show-button" type="button" data-toggle="collapse" data-target="#episode-collapse" aria-expanded="false" aria-controls="episode-collapse">
-        Hide
-      </button>
+      <a class="btn btn-dope float-right" href="#">
+        Button
+      </a>
     </div>
   </div>
   <div class="row results-list">
