--- a/index/static/style.css
+++ b/index/static/style.css
@@ -298,6 +298,7 @@ body {
 
 }
 #multibar-scroll {
+  border-bottom: 1px solid #000;
   margin-top: 44px;
   z-index: 95;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -440,6 +441,20 @@ body {
   position: absolute;
   top: 0;
   right: 0;
+}
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.close:focus {
+  outline: 0;
+}
+#player-minimize {
+  -webkit-appearance: none;
+  position: absolute;
+  top: 0;
+  right: 40px;
 }
 .login-field {
   padding: 5px 8px;
@@ -619,8 +634,20 @@ body {
     height: 240px;
 }
 
+#player-wrapper a, #player-wrapper a:hover {
+  color: #000;
+  text-decoration: none;
+}
 #player-wrapper {
-  /* position: relative; */
+  position: relative;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.shadow {
+  border-top: 1px solid #000;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
 }
 
 #footer {
