--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -27,7 +27,7 @@ dopepod
       {% endblock %}
     </div>
   </div>
-  <div class="row" id="multibar-scroll">
+  <div class="row color-1-trans shadow-down" id="multibar-scroll">
     {% include 'multibar.html' %}
   </div>
 </div>
