--- a/index/templates/optionsbar.html
+++ b/index/templates/optionsbar.html
@@ -74,7 +74,7 @@
     <div class="item">
       <div id="options-accordion1" class="collapse" role="tabpanel">
         {% if genres %}
-          <div class="options-group color" id="genre-buttons" data-toggle="buttons">
+          <div class="options-group-1" id="genre-buttons" data-toggle="buttons">
             <ul id="button-field">
               {% if selected_genre == 'All' %}
               <li>
@@ -116,7 +116,7 @@
     <div class="item">
       <div id="options-accordion2" class="collapse" role="tabpanel">
           {% if languages %}
-          <div class="options-group color" id="language-buttons" data-toggle="buttons">
+          <div class="options-group color-1" id="language-buttons" data-toggle="buttons">
             <ul id="button-field">
               {% if selected_language == 'All' %}
               <li>
