--- a/index/static/style.css
+++ b/index/static/style.css
@@ -121,9 +121,9 @@
 
 #logo {
   text-align: center;
-  font-size: 1.5rem;
-  padding-top: 2px;
-  padding-bottom: 8px;
+  font-size: 24px;
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 
 /* Extra small devices (phones, up to 480px) */
@@ -159,51 +159,65 @@ body {
 }
 
 .btn-dope {
+  color: #2e2e2e;
   font-size: 16px;
   padding: 5px 7px;
-  color: #000;
   background-color: #fff;
 }
-.btn-dope.active, .btn-dope:hover {
+.btn-dope.active, .btn-dope:hover, .btn-dope.focus, .btn-dope:focus{
   color: #fff;
   background-color: rgba(76,222,181,1);
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 0px 3px;
 }
-.btn-dope.focus, .btn-dope:focus {
-  box-shadow: none;
-}
+
 .btn-dope-disabled, .btn-dope-disabled.active, .btn-dope-disabled:hover  {
-  color: #000;
+  color: #2e2e2e;
   background: #ddd;
 }
 
-.color {
+.color-1-trans {
+  background: rgba(76,222,181,.9);
+}
+
+.color-1 {
   background: rgba(76,222,181,1);
-  background: -moz-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,1)), color-stop(100%, rgba(145,194,186,1)));
-  background: -webkit-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -o-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: -ms-linear-gradient(left, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  background: linear-gradient(to right, rgba(76,222,181,1) 0%, rgba(145,194,186,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4cdeb5', endColorstr='#91c2ba', GradientType=1 );
+}
+
+.color-2 {
+  background: rgba(45,43,43,1);
+}
+
+.shadow-down {
+  border-bottom: 1px solid #000;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+}
+
+.shadow-up {
+  border-top: 1px solid #000;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
+  box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
 }
 
 #navbar-drop {
   padding: 0;
 }
 #navbar a:hover {
-  color: #000;
+  color: #2e2e2e;
   text-decoration: none;
 }
 #navbar {
   padding: 0px;
-  background: rgba(50, 50, 50, 1);
   -webkit-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   -moz-box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   box-shadow: rgba(0,0,0,.5) 0 2px 3px;
   z-index: 99;
 }
 .navbar-dropdown {
-  background: rgba(50, 50, 50, 1);
   min-width: 0;
 }
 
@@ -221,17 +235,15 @@ body {
   margin-bottom: 3px;
 }
 #navbar .nav-fade li:hover {
-  color: rgba(0, 0, 0, 1);
-  background: #ddd;
-}
-#multibar .nav-fade li:hover {
+  color: #2e2e2e;
   background: #ddd;
 }
 #navbar .nav-link {
   color: rgba(255, 255, 255, 1);
+  font-size: 16px;
 }
 #navbar .nav-link:hover {
-  color: rgba(0, 0, 0, 1);
+  color: #2e2e2e;
 }
 
 #main {
@@ -254,10 +266,7 @@ body {
 .options-group {
   background-color: rgba(76,222,181,1);
 }
-.options-button.active, .options-button:hover {
-  background-color: rgba(76,222,181,1);
-  color: #fff;
-}
+
 .options-button {
   margin-right: 8px;
   margin-bottom: 8px;
@@ -298,19 +307,8 @@ body {
 
 }
 #multibar-scroll {
-  border-bottom: 1px solid #000;
   margin-top: 44px;
   z-index: 95;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  background: rgba(76,222,181,.9);
-  background: -moz-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(76,222,181,.9)), color-stop(100%, rgba(145,194,186,.9)));
-  background: -webkit-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
-  background: -o-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
-  background: -ms-linear-gradient(left, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
-  background: linear-gradient(to right, rgba(76,222,181,.9) 0%, rgba(145,194,186,.9) 100%);
 }
 #browse-toggle {
   margin-top: 8px;
@@ -381,6 +379,7 @@ body {
   border: 1px solid rgba(0,0,0,.15);
 }
 #q:focus {
+  border: 1px solid rgba(0,0,0,.3);
   -webkit-box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
   -moz-box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
   box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
@@ -393,9 +392,9 @@ body {
 #splash {
   font-size: 16px;
   background: #fff;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 1px 3px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 3px;
+  box-shadow: rgba(0,0,0,.3) 0 0 3px;
 }
 #splash-top {
   text-align: center;
@@ -463,7 +462,7 @@ body {
   margin-bottom: 10px;
 }
 .login-field:focus {
-  border: 1px solid rgba(0,0,0,.15);
+  border: 1px solid rgba(0,0,0,.3);
   -webkit-box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
   -moz-box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
   box-shadow: inset rgba(0,0,0,.2) -1px -1px 2px, inset rgba(0,0,0,.2) 1px 1px 2px;
@@ -550,7 +549,7 @@ body {
   border-top: none;
 }
 
-.h-line {
+hr .h-line {
   height: 1px;
   border: 0;
   background: #ddd;
@@ -562,28 +561,21 @@ body {
 }
 .results-wrapper {
   overflow: hidden;
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0px 2px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0px 2px;
-  box-shadow: rgba(0,0,0,.5) 0 0px 2px;
+  border: 1px solid #ddd;
 }
 .results-bar {
   overflow: hidden;
   max-width: 100%;
   margin-top: 15px;
   border-radius: .25rem .25rem 0 0;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 2px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 0px 2px;
-  box-shadow: rgba(0,0,0,.3) 0 0px 2px;
   color: #fff;
   font-size: 18px;
-  text-align: center;
   padding-top: 8px;
   padding-bottom: 8px;
 }
 
 .results-list {
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 10px;
 }
 .results-list a {
   color: #000;
@@ -593,6 +585,7 @@ body {
   -moz-transition: background .25s ease-in-out;
   -webkit-transition: background .25s ease-in-out;
   padding: 5px;
+  border-radius: .25rem;
 }
 .result-box:hover {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 1px 3px;
@@ -606,21 +599,27 @@ body {
   background: transparent url("loading.gif") center no-repeat;
 }
 .result-title, .result-title:hover {
-  max-height: 35px;
+  overflow: hidden;
+  height: 56px;
+  line-height: 1.25;
   white-space: normal;
 }
 .result-artist, .result-artist:hover {
-  text-overflow: ellipsis;
+  height: 36px;
   overflow: hidden;
-  white-space: nowrap;
+  margin: 0;
 }
 
 .browse-results-list {
+  font-size: 14px;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
 }
-.browse-results-list a {
+.browse-results-list li {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   height: 20px;
   margin-top: 4px;
   margin-bottom: 4px;
@@ -641,12 +640,6 @@ body {
   position: relative;
   padding-top: 5px;
   padding-bottom: 5px;
-}
-.shadow {
-  border-top: 1px solid #000;
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 -1px 3px;
 }
 
 #footer {
