--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!--HERE BE NAVBAR-->
-    <nav class="navbar fixed-top navbar-expand-md" id="navbar">
+    <nav class="navbar fixed-top navbar-expand-md color-2" id="navbar">
       <div class="container" id="navbar-drop">
         {% include 'navbar.html' %}
       </div>
@@ -31,11 +31,12 @@
       {% endblock %}
     </div>
     <!-- PLAYER -->
-    <div class="container-fluid fixed-bottom color" id="player-drop"></div>
+    <div class="container-fluid fixed-bottom" id="player-drop">
+    </div>
     <!--FOOTER-->
     <footer class="footer">
       <div class="container-fluid">
-        <div class="row color" id="footer">
+        <div class="row color-1" id="footer">
           <div class="col">
             <span>
               © dopepod 2017
