--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -2,7 +2,7 @@
   <a class="nav-link navbar-toggler" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </a>
-  <div class="dropdown-menu navbar-dropdown" aria-labelledby="navbarDropdownMenuLink">
+  <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbarDropdownMenuLink">
     <ul class="nav nav-fade d-block">
       <!-- <li class="nav-item">
         <a class="nav-link blog-link" href="#">
