--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,5 +1,5 @@
 {% if episodes %}
-<div class="col-auto color results-bar">
+<div class="col-auto color-1 results-bar">
   <span class="results-header">
     {{ episodes_header }}
   </span>
