--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row color-1-trans shadow-up">
   <div class="container">
     <div class="row" id="player-wrapper">
       <div class="col-auto" id="player-image">
@@ -20,12 +20,14 @@
           <source src="{{ url }}" type="{{ type }}" />
         </audio>
       </div>
-      <button type="button" id="player-minimize" class="close" aria-label="Minimize">
-        <i class="fas fa-window-minimize"></i>
-      </button>
-      <button type="button" id="player-close" class="close" aria-label="Close">
-        <i class="far fa-times-circle"></i>
-      </button>
+      <div id="player-buttons">
+        <button type="button" aria-label="Minimize">
+          <i class="fas fa-window-minimize"></i>
+        </button>
+        <button type="button" aria-label="Close">
+          <i class="far fa-times-circle"></i>
+        </button>
+      </div>
     </div>
   </div>
 </div>
